--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MLang</string>
-    <string name="test">Test</string>
+    <string name="local_string">本地字符串</string>
+    <string name="fallback_string">本地不存在的字符串</string>
 </resources>
